--- a/src/_includes/layouts/baseLayout.html
+++ b/src/_includes/layouts/baseLayout.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    {% include "partials/mainNavigation.html" %}
+
     {{ content | safe }}
+
     <!-- scripts -->
     <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
