--- a/src/_includes/layouts/baseLayout.html
+++ b/src/_includes/layouts/baseLayout.html
@@ -15,6 +15,8 @@
 
     {{ content | safe }}
 
+    {% include "partials/siteFooter.html" %}
+
     <!-- scripts -->
     <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
