--- a/src/_includes/partials/mainNavigation.html
+++ b/src/_includes/partials/mainNavigation.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Navbar</a>
+        <a class="navbar-brand" href="index.html">{{ sitedata.name }}</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
