Test correct way to implement stylesheet links

--- a/src/_includes/layouts/baseLayout.html
+++ b/src/_includes/layouts/baseLayout.html
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="./css/fontawesome.css">
+    <link rel="stylesheet" href="{{'./css/fontawesome.css' | url | safe }}">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
