Update baseLayout.html stylesheet links for testing

--- a/src/_includes/layouts/baseLayout.html
+++ b/src/_includes/layouts/baseLayout.html
@@ -6,9 +6,9 @@
     <title>{{ title }}</title>
 
     <!-- stylesheets -->
-    <link rel="stylesheet" href="{{'../css/fontawesome.css' | url | safe }}">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/fontawesome.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     {% include "partials/mainNavigation.html" %}
@@ -18,6 +18,6 @@
     {% include "partials/siteFooter.html" %}
 
     <!-- scripts -->
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
