--- a/src/_includes/layouts/baseLayout.html
+++ b/src/_includes/layouts/baseLayout.html
@@ -13,7 +13,9 @@
 <body>
     {% include "partials/mainNavigation.html" %}
 
-    {{ content | safe }}
+    <main class="container-wrapper">
+        {{ content | safe }}
+    </main>
 
     {% include "partials/siteFooter.html" %}
 
